<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyUIContantsBackUp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="main_activity_title">MyUI帐户</string>
    <string name="main_activity_backupcontent">备份内容</string>
    <string name="main_activity_backupandrestore">备份和恢复</string>
    <string name="main_activity_backup">备份</string>
    <string name="main_activity_restore">恢复</string>
    <string name="main_activity_unlogain">未登录</string>
    <string name="main_activity_settings">设置</string>
    <string name="main_activity_settings_backup">备份设置</string>
    <string name="main_activity_settings_restore">恢复设置</string>
    <string name="backupactivity_title">备份</string>
    <string name="backupactivity_button">立即备份</string>


    <string name="backupactivity_autobackup">自动备份</string>
    <bool name="backupdativity_autobackup_defaultvalue">true</bool>
    <string name="backupactivity_autobackup_wifi">仅在WIFI环境下自动备份</string>
    <bool name="backupdativity_autobackup_wifi_defaultvalue">true</bool>

    <string name="backupactivity_autobackup_dialog_title">备份频率</string>
    <string name="backupactivity_autobackup_frq">自动备份频率</string>
    <string name="backupactivity_autobackup_value_1">每天</string>
    <string name="backupactivity_autobackup_value_2">每周</string>
    <string name="backupactivity_autobackup_value_3">每月</string>
    <string-array name="backupactivity_autobackup_entry">
        <item>@string/backupactivity_autobackup_value_1</item>
        <item>@string/backupactivity_autobackup_value_2</item>
        <item>@string/backupactivity_autobackup_value_3</item>
    </string-array>
    <!-- h -->
    <string-array name="backupactivity_autobackup_entryvalues" translatable="false">
        <item>1</item>
        <item>7</item>
        <item>30</item>
    </string-array>
    <string name="backupactivity_autobackup_defaultvalue">7</string>

    <string name="backupactivity_backup_cat_title">备份内容</string>
    <bool name="backupactivity_backup_value_contacts_defaultvalue">true</bool>
    <string name="backupactivity_backup_value_contacts">联系人</string>
    <bool name="backupactivity_backup_value_mms_defaultvalue">true</bool>
    <string name="backupactivity_backup_value_mms">信息（彩信）</string>
    <bool name="backupactivity_backup_value_sms_defaultvalue">true</bool>
    <string name="backupactivity_backup_value_sms">信息</string>
    <bool name="backupactivity_backup_value_celllog_defaultvalue">true</bool>
    <string name="backupactivity_backup_value_celllog">通话记录</string>

    <string name="backupactivity_restore_cat_title">已恢复内容</string>


    <string name="restoreactivity_restore_activitytitle">恢复</string>
    <string name="restoreactivity_restore_backuped">已备份</string>
    <string name="restoreactivity_restore_button">立即恢复</string>

    <string name="contacts_qingcheng">青橙客服</string>
    <string name="contacts_qingcheng_number">4008215000</string>
    <!-- backup or restore -->
    <string name="lib_unknow">未知操作</string>
    <string name="lib_backup_contacts">备份联系人</string>
    <string name="lib_backup_sms">备份信息</string>
    <string name="lib_backup_mms">备份信息</string>
    <string name="lib_backup_celllog">备份通话记录</string>
    <string name="lib_restore_contacts">恢复联系人</string>
    <string name="lib_restore_sms">恢复信息</string>
    <string name="lib_restore_mms">恢复信息</string>
    <string name="lib_restore_celllog">恢复通话记录</string>

    <string name="message_backuping">正在备份数据至云端</string>
    <string name="message_restoreing">正在从云端恢复数据</string>
</resources>
